@@ -1,19 +1,4 @@
-MooseX-Daemonize version 0.0.1
-
-[ REPLACE THIS...
-
-  The README is used to introduce the module and provide instructions on
-  how to install the module, any machine dependencies it may have (for
-  example C compilers and installed libraries) and any other information
-  that should be understood before the module is installed.
-
-  A README file is required for CPAN modules since CPAN extracts the
-  README file from a module distribution so that people browsing the
-  archive can use it get an idea of the modules uses. It is usually a
-  good idea to provide version information here so that people can
-  decide whether fixes for the module are worth downloading.
-]
-
+MooseX-Daemonize version 0.0.5
 
 INSTALLATION
 
@@ -32,12 +17,11 @@ Alternatively, to install with Module::Build, you can use the following commands
     ./Build test
     ./Build install
 
-
-
 DEPENDENCIES
 
-None.
-
+    Moose
+    MooseX::Getopt
+    MooseX::Types::Path::Class
 
 COPYRIGHT AND LICENCE
 
